# finalbosstech-veto-frontier

./: .dockerignore  .env.example  DEPLOY.md  DEPLOYMENT_COMPLETE.md  FINAL_SUMMARY.txt  PROJECT_SUMMARY.md  QUICKSTART.md  SETUP.md  config.js  docker-compose.yml  fly.toml  index.html  railway.toml  update-frontend.js
.github/workflows/: deploy.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  README.md
backend/src/: config.rs  main.rs
backend/src/api/: errors.rs  handlers.rs  mod.rs
backend/src/crypto/: ed25519.rs  hashing.rs  mod.rs  receipts.rs
backend/src/db/: connection.rs  mod.rs  models.rs  queries.rs
backend/src/enforcement/: mod.rs  pointer_guard.rs
database/: README.md  schema.sql  setup.sh
