[package]
name = "veto-frontier-backend"
version = "0.1.0"
edition = "2021"
authors = ["FinalBoss Tech"]
description = "Production backend for pointer orphaning veto system (US 19/240,581)"

[dependencies]
# Web framework - Axum (high-performance, ergonomic)
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database - SQLx with PostgreSQL
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Cryptography
ed25519-dalek = "2.1"
sha3 = "0.10"
rand = "0.8"
data-encoding = "2.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID generation
uuid = { version = "1.6", features = ["serde", "v4"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Environment variables
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP types
http = "1.0"

[dev-dependencies]
# Testing
reqwest = { version = "0.11", features = ["json"] }
tokio-test = "0.4"

[profile.release]
# Optimize for performance (sub-8ms target)
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
# Fast compilation for development
opt-level = 0
